<resources>
    <!-- Title -->
    <string name="app_name">SimpleChatApp</string>
    <string name="profile_title">Profile</string>


    <!-- Auth -->
    <string name="email_hint_text">Email</string>
    <string name="name_hint_text">Full name</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Sign Up</string>
    <string name="to_register_button_text">No account? <u>Sign up</u></string>
    <string name="back_to_login_text">Already have an account? <u>Log in</u></string>


    <!-- Profile -->
    <string name="profile_menu_action_title">Profile</string>
    <string name="profile_log_out_button_text">Log out</string>
    <string name="edit_profile_menu_action_title">Edit profile</string>
    <string name="edit_profile_submit_button_text">Submit</string>

    <!-- Chat -->
    <string name="chat_last_message">%1$s: %2$s</string>
    <string name="new_message_hint_text">New chat message</string>
    <string name="new_chat_name_hint_text">New chat name</string>
    <string name="new_chat_message_hint_text">New chat message</string>
    <string name="new_chat_dialog_title">Create a Chat</string>
    <string name="rename_chat_dialog_title">Rename Chat</string>
    <string name="new_chat_dialog_create_button_text">Create</string>
    <string name="rename_chat_dialog_rename_button_text">Rename</string>
    <string name="new_chat_dialog_cancel_button_text">Cancel</string>
    <string name="chat_edit_name_menu_action_title">Edit name</string>

    <!-- Tools (placeholders, dev use only) -->
    <string name="chat_name_field">Chat Name</string>
    <string name="chat_last_message_field">Chat Last Message</string>
    <string name="profile_name_field">Name</string>
    <string name="profile_email_field">Email Address</string>
    <string name="login_account_prompt">Account status? <u>prompt</u></string>





</resources>
