<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.trautmann.simplechatapp.viewmodel.ProfileActivityViewModel" />
    </data>

    <LinearLayout
        style="@style/DefaultPadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:gravity="center_horizontal"
            android:text="@{viewModel.userName}"
            android:visibility="@{viewModel.editingProfile ? View.GONE : View.VISIBLE}"
            tools:text="@string/profile_name_field" />

        <EditText
            android:id="@+id/editNameEditText"
            style="@style/DefaultPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:background="@drawable/background_text_input"
            android:enabled="@{viewModel.networking ? false : true}"
            android:gravity="center_horizontal"
            android:hint="@string/name_hint_text"
            android:inputType="textEmailAddress"
            android:visibility="@{viewModel.editingProfile ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/profileEmailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:gravity="center_horizontal"
            android:text="@{viewModel.userEmail}"
            android:visibility="@{viewModel.editingProfile ? View.GONE : View.VISIBLE}"
            tools:text="@string/profile_email_field" />

        <EditText
            android:id="@+id/editEmailEditText"
            style="@style/DefaultPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing"
            android:background="@drawable/background_text_input"
            android:enabled="@{viewModel.networking ? false : true}"
            android:gravity="center_horizontal"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:visibility="@{viewModel.editingProfile ? View.VISIBLE : View.GONE}" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing">

            <ProgressBar
                android:id="@+id/logOutProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{viewModel.networking ? View.VISIBLE : View.GONE}" />

            <Button
                android:id="@+id/profileLogOutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/background_large_button"
                android:enabled="@{viewModel.networking ? false : true}"
                android:onClick="@{viewModel.editingProfile ? viewModel.onUpdateUserClicked(editNameEditText, editEmailEditText, context) : viewModel.onLogOutClicked(context)}"
                android:text="@{viewModel.editingProfile ? @string/edit_profile_submit_button_text : @string/profile_log_out_button_text}"
                android:visibility="@{viewModel.networking? View.GONE : View.VISIBLE}" />


        </RelativeLayout>


    </LinearLayout>

</layout>